// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/branch/commit commitFilesToBranch commits files 1`] = `
Array [
  Array [
    Object {
      "branchName": "renovate/some-branch",
      "files": Array [
        Object {
          "contents": "some contents",
          "path": "package.json",
          "type": "addition",
        },
      ],
      "force": false,
      "message": "some commit message",
      "platformCommit": false,
    },
  ],
]
`;

exports[`workers/branch/commit commitFilesToBranch commits via platform 1`] = `
Array [
  Array [
    Object {
      "branchName": "renovate/some-branch",
      "files": Array [
        Object {
          "contents": "some contents",
          "path": "package.json",
          "type": "addition",
        },
      ],
      "force": false,
      "message": "some commit message",
      "platformCommit": true,
    },
  ],
]
`;
